test/expected/explain_co_exclam_k_b.out
explain bool operator!(S) const
                       ^
24: error: member operator "!" must have exactly 0 parameters
